[package]
name = "sip_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.21.3", features = [ "wgpu" ]}
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.61", features = [ "WebSocket", "MessageEvent" ] }
serde = { version = "1.0.160", features = [ "derive" ]}
serde_json = "1.0.96"

[target.'cfg(windows)'.dependencies]
websocket = "0.26.5"
ghostemp = { path = "../ghostemp" }

[profile.release]
# Do not perform backtrace for panic on release builds.
panic = 'abort'
# Perform optimizations on all codegen units.
codegen-units = 1
# Optimize for size.
opt-level = 'z'
# Enable link time optimization.
lto = true